[package]
name = "sourcerer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = "1.0.136"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = {version = "3.1.10", features = ["derive"]}
sudo = "0.6.0"
fs_extra = "1.2.0"